# scanner

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml  strategies.example.json
docs/superpowers/plans/: 2026-07-18-scanner-phase1-pumpportal-implementation.md  2026-07-18-scanner-router-integration-implementation.md  2026-07-18-scanner-source2-geckoterminal-implementation.md  2026-07-18-scanner-source3-birdeye-implementation.md  2026-07-19-scanner-filtering-rules-implementation.md
docs/superpowers/specs/: 2026-07-18-scanner-phase1-pumpportal-design.md  2026-07-18-scanner-router-integration-design.md  2026-07-18-scanner-source2-geckoterminal-design.md  2026-07-18-scanner-source3-birdeye-design.md  2026-07-19-scanner-filtering-rules-design.md
src/scanner/: __init__.py  birdeye.py  config.py  events.py  filter_main.py  filter_runner.py  geckoterminal.py  main.py  publisher.py  pumpportal.py  strategies.py  strategy_config.py
tests/: test_birdeye.py  test_events.py  test_filter_runner.py  test_geckoterminal.py  test_publisher.py  test_pumpportal.py  test_strategies.py  test_strategy_config.py
