[project]
name = "zetryn-scanner"
version = "0.1.0"
description = "Real-time Solana token/migration event scanner — publishes to Redis Streams"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "redis>=5.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
